crates/pardosa-schema/tests/compile_fail/arc_genome_safe.rs
use pardosa_schema::GenomeSafe;
fn main() {
    let _ = <std::sync::Arc<String> as GenomeSafe>::SCHEMA_HASH;
}
