crates/pardosa-schema/tests/compile_fail/arc_genome_safe.stderr
error[E0277]: the trait bound `Arc<String>: GenomeSafe` is not satisfied
 --> tests/compile_fail/arc_genome_safe.rs:3:14
  |
3 |     let _ = <std::sync::Arc<String> as GenomeSafe>::SCHEMA_HASH;
  |              ^^^^^^^^^^^^^^^^^^^^^^ the trait `GenomeSafe` is not implemented for `Arc<String>`
  |
  = help: the following other types implement trait `GenomeSafe`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others

error[E0277]: `String` is not `EventSafe`
 --> tests/compile_fail/arc_genome_safe.rs:3:14
  |
3 |     let _ = <std::sync::Arc<String> as GenomeSafe>::SCHEMA_HASH;
  |              ^^^^^^^^^^^^^^^^^^^^^^ needs `#[derive(GenomeSafe)]` or a bounded wrapper
  |
  = help: the trait `EventSafe` is not implemented for `String`
  = note: Only types blessed by `#[derive(GenomeSafe)]` or workspace-internal impls may implement `EventSafe`. See GEN-0036 and Solon doctrine (ADOPTION.md, 16 Rules).
  = note: Common substitutions: `String` → `EventString<MAX>` / `NonEmptyEventString<MAX>`; `Vec<T>` → `EventVec<T, MAX>`; `Vec<u8>` → `EventBytes<MAX>` (all from `pardosa_schema::bounded`).
  = note: Timestamps: use `pardosa_wire::Timestamp` (nonzero-u64 nanos since UNIX epoch).
  = note: Map- and set-shaped payloads (`HashMap`/`BTreeMap`/`HashSet`/`BTreeSet`) are forbidden by Solon doctrine (STORY §4.2): enumerate keys as named struct fields or an enum, or store the map outside the event store.
  = help: the following other types implement trait `EventSafe`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
  = note: required for `Arc<String>` to implement `EventSafe`
note: required by a bound in `SCHEMA_HASH`
 --> src/genome_safe.rs
  |
  | pub trait GenomeSafe: pardosa_wire::EventSafe {
  |                       ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `GenomeSafe::SCHEMA_HASH`
  |     const SCHEMA_HASH: u128;
  |           ----------- required by a bound in this associated constant
